Fixed bugs in LoopAnalysis